class DialogoMac implements Diealogo {
    public void mostrar() {
        System.out.println("Mostrando dialogo Mac");
    }
}