class DialogoWindows implements Diealogo {
    public void mostrar() {
        System.out.println("Mostrando dialogo Windows");
    }
}